# POC-ifood-genai-refunds-agent

./: .gitignore  ENGINEERING_GUIDELINES.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/rag/: agent.py  ingestion.py  llm_client.py  retriever.py
backend/tests/: test_ingestion_and_retrieval.py
data/: base_conhecimento_ifood_genai-exemplo.csv
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: Chat.test.tsx  Chat.tsx  MessageBubble.tsx  SourcesPanel.tsx
frontend/src/services/: api.ts
