[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "data*", "tests*"]

[project]
name = "ifood-genai-refunds-agent"
version = "0.1.0"
description = "POC de agente interno iFood com RAG para reembolsos e cancelamentos"
authors = [{name = "Foodlover Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.340",
    "langchain-community>=0.0.12",
    "langchain-openai>=0.0.7",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "httpx>=0.25.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=backend --cov-report=term-missing"
testpaths = ["backend/tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
